# mas-sycophancy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  PROTOTYPING_GUIDE.md  dashboard.py  pyproject.toml  requirements.txt  todo.md
analysis/: __init__.py  aggregate_results.py  evaluate_trail.py  visualize.py
data/: flat_geopolitical_event_demo_result.json  flat_policy_draft_demo_result.json  flat_tech_earnings_demo_result.json  hier_geopolitical_event_demo_result.json  hier_policy_draft_demo_result.json  hier_tech_earnings_demo_result.json
docs/: AUDIT_REPORT.md  Ambiguity_Resolution_Plan.md  TASK_GUIDE.md  TRAIL_Framework_Guide.md  VERTEX_SETUP.md
docs/research/: pivot_summary.md
experiments/: run_flat_baseline.py  run_full_suite.py  run_hierarchical.py  run_whistleblower.py
local_evidence/: README.md  example_finance_googl_capex.json  example_geopolitics_oil_sanctions.json
scripts/: import_evidence.py  prepare_financial_db.py  spike_concordia_vertex.py
src/: __init__.py  config.py  language_model.py  model.py  rate_limiter.py
src/agents/: __init__.py  analyst_prefab.py  components.py  director_prefab.py  manager_prefab.py  orchestrator_prefab.py  output_parser.py  prefab_common.py  tool_act_component.py  whistleblower.py  whistleblower_prefab.py
src/game_master/: __init__.py  simulation.py
src/hallucination/: __init__.py  injector.py
src/mas_sycophancy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/metrics/: __init__.py  deference_lexicon.json  flip_metrics.py  linguistic.py  prediction_quality.py  scoring.py  sycophancy_effect.py  task_scoring.py  trail.py  trail_judge.py
src/persistence/: __init__.py  postgres.py  records.py  schema.sql
src/tasks/: __init__.py  (+1 more)
tests/: test_agents.py  test_aggregate_and_visualize.py  test_game_master.py  test_hallucination_injector.py  test_metrics.py  test_persistence.py  test_scoring.py  test_tasks.py  test_topologies.py  test_whistleblower.py
(+32 files in other folders)
