[project]
name = "mas-sycophancy"
version = "0.1.0"
description = "Investigating hallucination propagation in hierarchical multi-agent systems"
requires-python = ">=3.13"
dependencies = [
    "gdm-concordia==2.4.0",
    "google-cloud-aiplatform>=1.143.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "absl-py>=2.0.0",
    "tenacity>=8.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
analysis = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Install src/, experiments/, and analysis/ as top-level packages so that
# `from src.config import ...` and `python -m experiments.run_flat_baseline`
# both work after `uv pip install -e .`
packages = ["src", "experiments", "analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# Pin to the exact Python version used during development.
python-preference = "only-system"

[dependency-groups]
analysis = [
    "plotly>=6.6.0",
    "streamlit>=1.56.0",
]
